Fixed template for change visible.

--- a/biodig/web/static_v2/css/taggable.css
+++ b/biodig/web/static_v2/css/taggable.css
@@ -68,7 +68,7 @@
 }
 
 .status-messages-container {
-	min-height: 40px;
+	min-height: 30px;
 	width: 100%;
 	position: absolute;
 	z-index: 1000;
